Problème avec le REGEX de validation de l'E-mail

--- a/formulaire.html
+++ b/formulaire.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Insert in BDD with a Form</title>
+        <title>Insertion dans une BDD avec un formulaire</title>
         <link href="main.css" rel="stylesheet">
     </head>
     <body>
@@ -20,6 +20,7 @@
        <!--// pattern: expression régulière à vérifier pour pouvoir valider -->
       <input id="telephone" type="tel" placeholder=""><br>
       <label for="email">Email <em>*</em></label>
+	  <!--TO DO Problème avec le REGEX pour la validation-->
       <input id="email" type="email" placeholder="" required="" pattern="[a-zA-Z]*.[a-zA-Z]*@"><br>
   </fieldset>
   <fieldset>
