--- a/formulaire.html
+++ b/formulaire.html
@@ -21,7 +21,8 @@
       <input id="telephone" type="tel" placeholder=""><br>
       <label for="email">Email <em>*</em></label>
 	  <!--TO DO Problème avec le REGEX pour la validation-->
-      <input id="email" type="email" placeholder="" required="" pattern="[a-zA-Z]*.[a-zA-Z]*@"><br>
+      <input id="email" type="email" placeholder="" required="" <!--pattern="[a-zA-Z]*.[a-zA-Z]*@"-->><br>
+	  <!--Problème REGEX-->
   </fieldset>
   <fieldset>
     <legend>Information personnelles</legend>
