--- a/formulaire.html
+++ b/formulaire.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h2>Formulaire d'exemple</h2>
-<form id="main_box" action="traitement.php" method="POST">
+<form id="main_box" action="connexion.php" method="POST">
   <p><i>Les champs marqué par</i><em>*</em> sont <em>obligatoires</em></p>
   <fieldset>
     <legend>Contact</legend>
